--- a/src/app/pages/onama/onama.component.html
+++ b/src/app/pages/onama/onama.component.html
@@ -2,7 +2,9 @@
   <div class="section-block justify-text">
     <h2>🧭 O nama</h2>
     <p>
-        <strong>Centar Sensus</strong>  je udruga sa sjedištem u <strong>Sesvetama, Zagreb</strong>, posvećena poboljšanju kvalitete života djece, mladih i odraslih u našoj zajednici. Vjerujemo u snagu zajedništva, osobni razvoj i stvaranje prostora u kojem svatko može rasti i ostvariti svoj puni potencijal.
+      <strong>Centar Sensus</strong> je udruga sa sjedištem u <strong>Sesvetama, Zagreb</strong>, posvećena poboljšanju
+      kvalitete života djece, mladih i odraslih u našoj zajednici. Vjerujemo u snagu zajedništva,
+      osobni razvoj i stvaranje prostora u kojem svatko može rasti i ostvariti svoj puni potencijal.
     </p>
   </div>
 
@@ -12,17 +14,19 @@
       <li>pomagati djeci, mladima i odraslima da ostvare svoj puni potencijal</li>
       <li>poticati razvoj dobrih i korisnih navika u svakodnevnom životu</li>
       <li>osnaživanje mladih</li>
-      <li>podršku roditeljstvu</li>
+      <li>podrška roditeljstvu</li>
     </ul>
     <p>
-      Vodimo se <strong>holističkim pristupom dobrobiti</strong> – gledamo osobu kao cjelinu, uzimajući u obzir njezinu <em>mentalnu, emocionalnu i socijalnu dimenziju</em>.
+      Vodimo se <strong>holističkim pristupom dobrobiti</strong> – gledamo osobu kao cjelinu, uzimajući u obzir njezinu
+      <em>mentalnu, emocionalnu i socijalnu dimenziju</em>.
     </p>
   </div>
 
   <div class="section-block">
     <h2>🤝 Djelujemo u zajednici</h2>
     <p>
-      <strong>Centar Sensus</strong> nije samo prostor – to je <em>mjesto susreta</em>, <em>suradnje</em> i <em>pozitivnih promjena</em>.
+      <strong>Centar Sensus</strong> nije samo prostor – to je <em>mjesto susreta</em>, <em>suradnje</em> i
+      <em>pozitivnih promjena</em>.
     </p>
     <ul>
       <li>lokalna događanja i druženja</li>
@@ -30,7 +34,8 @@
       <li>volonterske aktivnosti i projekti za sve generacije</li>
     </ul>
     <p>
-      Za idealiste koji nikad ne gube nadu u <strong>bolje, veselije i ispunjenije sutra </strong> za sebe i svoje najbliže, ali i zajednicu i društvo u cjelini.
+      Za idealiste koji nikad ne gube nadu u <strong>bolje, veselije i ispunjenije sutra</strong> za sebe i svoje
+      najbliže, ali i zajednicu i društvo u cjelini.
     </p>
   </div>
 
@@ -45,27 +50,27 @@
 
   <div class="section-block">
     <h2>🧑‍🤝‍🧑 Postanite dio priče</h2>
-    <p>
-      Ako dijelite naše vrijednosti i želite se uključiti:
-    </p>
+    <p>Ako dijelite naše vrijednosti i želite se uključiti:</p>
     <ul>
-      <li>možete se učlaniti kao <strong>redovan</strong> ili <strong>podupirući član</strong></li>
+      <li>
+        možete se učlaniti kao <strong>redovan</strong> ili <strong>podupirući član</strong>, biti <strong>volonter</strong> ili pomoći <strong>donacijama</strong>
+      </li>
     </ul>
   </div>
 
-<div class="section-block donate justify-text">
-  <h2>💖 Podržite nas</h2>
-  <p>
-    Centar Sensus je <strong>neprofitna organizacija</strong> koja djeluje kako bi zajednici i pojedincima pružila što više <em>lako dostupnih i korisnih usluga</em>.  
-    Svaka vaša donacija omogućuje nam da nastavimo s radom i pomognemo još većem broju ljudi - djeci, mladima, roditeljima i svima kojima je podrška potrebna.
-  </p>
-  <p>
-    🎁 Donirati možete jednostavno – <strong>skenirajte QR kod</strong> putem svog mobilnog bankarstva i upišite željeni iznos.
-  </p>
-  <div class="qr-code">
-    <img src="assets/qr-donacija.png" alt="QR kod za donaciju" />
+  <div class="section-block donate justify-text">
+    <h2>💖 Podržite nas</h2>
+    <p>
+      Centar Sensus je <strong>neprofitna organizacija</strong> koja djeluje kako bi zajednici i pojedincima pružila što
+      više <em>lako dostupnih i korisnih usluga</em>. Svaka vaša donacija omogućuje nam da nastavimo s radom i pomognemo
+      još većem broju ljudi – djeci, mladima, roditeljima i svima kojima je podrška potrebna.
+    </p>
+    <p>
+      🎁 Donirati možete jednostavno – <strong>skenirajte QR kod</strong> putem svog mobilnog bankarstva i upišite željeni iznos.
+    </p>
+    <div class="qr-code">
+      <img src="assets/qr-donacija.png" alt="QR kod za donaciju" />
+    </div>
+    <p class="center-text"><strong>Hvala vam na svakom obliku podrške. 🙏</strong></p>
   </div>
-  <p class = "center-text"><strong>Hvala vam na svakom obliku podrške. 🙏</strong></p>
-</div>
-
 </section>
